web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    pod-app: web-servicepod
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-servicepod-deployment
  labels:
    app: web-servicepod
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-app: web-servicepod
  template:
    metadata:
      labels:
        pod-app: web-servicepod
    spec:
      containers:
      - name: web-service-container                 #change the name of container 
        image: travelportregistry.azurecr.io/$TRAVELPORTAPI:latest #change to your ACR image
