ingress-route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: intranet.travelport.local #change with actual host name
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 8080
  - host: api.example.com #change with actual host name
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 8080
